--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,30 @@
 html{
     font-size: 62.5%;
 }
+.nav{
+    width: 100%;
+    height: 50px;
+    background-color: chartreuse;
+}
+.container
+{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.c1, .c2, .c3 
+{
+    width: 100%;
+    height: 150px;
+
+}
+
+.c1{background-color: aliceblue;}
+.c2{background-color:darkolivegreen;}
+.c3{background-color: forestgreen;}
+
+footer
+{
+    background-color: brown;
+}
