--- a/styles.css
+++ b/styles.css
@@ -7,33 +7,127 @@
 html{
     font-size: 62.5%;
 }
+body{
+    font-size: 1.6rem;
+    
+}
 .nav{
+    position: fixed;
+    top:0;
+    left: 0;
     width: 100%;
-    height: 50px;
+    height: 20px;
+    display: flex;
     background-color: chartreuse;
+    z-index: 1000;
+
+    /*
+    width: 100%;
+    height: 20px;
+  
+    background-color: chartreuse;
+    display: relative;
+    */
+    
+    
 }
 .container
 {
     width: 100%;
     height: auto;
-    display: flex;
-    flex-wrap: wrap;
+   background-color: aquamarine;
+   position: relative;
+ 
+    
 }
-.c1, .c2, .c3 
+.c1 p
 {
     width: 100%;
-    height: 150px;
+    height: auto;
+    text-align: center;
+    padding: 20px;
 
 }
 
-.c1{background-color: rgb(91, 216, 101);}
-.c2{background-color:darkolivegreen;}
-.c3{background-color: forestgreen;}
+.c1{background-color: rgb(91, 216, 101);
+   }
+
 
 footer
 {
-    background-color: brown;
+    background-color: rgb(189, 127, 20);
 }
+
+.menu{ position: absolute;
+  right:0;
+    display: inline-block;
+
+  }
+
+
 li{
     display: inline-block;
 }
+h1 ,h2 {
+    padding: 1%;
+    text-align: center;
+}
+
+ footer{ width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content:space-around;
+    
+}
+ .f1{
+    display: flex;
+    align-items: center;
+    background-color: rgb(144, 225, 124);}
+
+ .f2{display: flex;
+    align-items: center;
+    background-color: rgb(248, 143, 68);}
+ .f3{display: flex;
+    align-items: center;
+    background-color: rgb(59, 239, 59);}
+ 
+.f1, .f2, .f3{width: 150px;
+justify-content: center;}
+.imagenes{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    background-color: papayawhip;
+    width: 100%;
+    height: 400px;
+}
+.i{
+    background-color: palevioletred;
+}
+.imagenes .i:nth-child(1)
+{grid-column: 1 / 5;}
+
+.imagenes .i:nth-child(2)
+{grid-column: 2 / 2;
+grid-row: 2 / 2;}
+
+.imagenes .i:nth-child(3)
+{grid-column: 2 / 5;
+grid-row: 3 / ;}
+
+.imagenes .i:nth-child(4)
+{grid-column: 2 / 3;
+grid-row: 4 / 4;}
+
+main{ margin-top: 14px;
+
+}
+
+
+ul .titulo{
+    position: sticky;
+    top:-15px;
+    z-index: 1300;
+    padding: 20px;
+}
+.titulo{font-weight:bold;}
