--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,95 @@
 html{
     font-size: 62.5%;
 }
+:root{
+    --white: #FFFFFF;
+    --black: #000000;
+    --very-light-pink: #C7C7C7;
+    --text-input-field: #f7f7f7;
+    --hospital-green: #acd9b2;
+    --sm: 14px;
+    --md: 16px;
+    --lg: 18px;
+}
 body{
     font-size: 1.6rem;
-    
+    font-family: "Poppins", sans-serif;
 }
+.login{
+    width: 100%;
+    /*height: 100vh;*/
+    
+    display: grid;
+    place-items: center;
+}
+/*resivar esta area .form-container xq no se esta aplicando*/
+.form-container{
+    display: grid;
+    grid-template-rows: auto 1fr auto; 
+    width: 300px;
+   
+}
+.logo{
+     width: 150px;
+     margin-bottom: 48px;
+     justify-self: center;
+    display: none;
+    margin-top: 30px;
+    
+    
+     }
+.title{
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+      }
+.sub-title{
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    font-weight: 300;
+    margin: 0;
+    margin-bottom: 32px;
+    text-align: center;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+}
+.label{
+    font-size: var(--sm);
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+input{
+     background-color:var(--text-input-field);
+     border:none;
+     border-radius: 8px;
+     font-size: var(--md);
+     padding: 6px;
+     margin-bottom: 15px;
+     }
+     .primary-button{
+        background-color: var(--hospital-green);
+        border-radius: 8px;
+        border: none;
+        color:var(--white);
+        width: 100%;
+        cursor: pointer;
+        font-size: var(--md);
+        font-weight: bold;
+        height: 50px;
+    }
+    .login-button{
+        margin-top: 14px;
+        margin-bottom: 30px;
+    }
+    @media(max-width:640px){
+        .logo{
+            display: block;
+            
+        }
+        }
+
 .nav{
     position: fixed;
     top:0;
@@ -113,7 +198,7 @@ grid-row: 2 / 2;}
 
 .imagenes .i:nth-child(3)
 {grid-column: 2 / 5;
-grid-row: 3 / ;}
+grid-row: 3 / 2;}
 
 .imagenes .i:nth-child(4)
 {grid-column: 2 / 3;
