--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 html{
     font-size: 62.5%;
+   
 }
 :root{
     --white: #FFFFFF;
@@ -32,7 +33,7 @@ body{
 .form-container{
     display: grid;
     grid-template-rows: auto 1fr auto; 
-    width: 300px;
+    width: 100%;
    
 }
 .logo{
@@ -57,6 +58,8 @@ body{
     margin-bottom: 32px;
     text-align: center;
 }
+
+
 .form{
     display: flex;
     flex-direction: column;
@@ -180,15 +183,22 @@ h1 ,h2 {
 justify-content: center;}
 .imagenes{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, 240px);
     background-color: papayawhip;
     width: 100%;
-    height: 400px;
+    height: auto;
+    object-fit: cover;
+    justify-content: end;
+    
 }
-.i{
+.i img{
     background-color: palevioletred;
+    width: 140px;
+    height: 140px;
+    border-radius: 26px;
+  
 }
+/*
 .imagenes .i:nth-child(1)
 {grid-column: 1 / 5;}
 
@@ -206,7 +216,7 @@ grid-row: 4 / 4;}
 
 main{ margin-top: 14px;
 
-}
+}*/
 
 
 ul .titulo{
